# parallels

./: README.md
Task_1/: CMakeLists.txt  Makefile  README.md  main.cpp
Task_2/src/subtask1/: Makefile  task1.cpp
Task_2/src/subtask2/: Makefile  task2.cpp
Task_2/src/subtask3/: Makefile
Task_2/subtask3/: task3.cpp
